--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,12 +7,14 @@
     <title>Restaurant POS</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
 
     <!-- JS -->
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
+    <!-- UI-Router -->
+    <script src="//angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <!--
@@ -24,24 +26,29 @@
     <script src="js/app.js"></script>
 </head>
 <body ng-app="restaurantPOS" ng-controller="MainController">
-<div class="container">
-
-    <!-- HEADER -->
-    <nav class="navbar navbar-inverse">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">Home</a>
-        </div>
-
-        <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
-        <ul class="nav navbar-nav">
-            <li><a href="/waiter">Waiter</a></li>
-            <li><a href="/kitchen">Kitchen</a></li>
-        </ul>
-    </nav>
-
-    <!-- ANGULAR DYNAMIC CONTENT -->
-    <div ng-view></div>
-
+<!-- NAVBAR -->
+<!-- HEADER -->
+<div class="navbar navbar-inverse navbar-static-top">
+   <div class="container">
+       <div class="navbar-header">
+           <a class="navbar-brand" href="/">Home</a>
+           <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+               <span class="sr-only">Toggle Navigation</span>
+               <span class='icon-bar'></span>
+               <span class='icon-bar'></span>
+               <span class='icon-bar'></span>
+           </button>
+       </div>
+       <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
+           <li><a href="/waiter">Waiter</a></li>
+           <li><a href="/kitchen">Kitchen</a></li>
+       </ul>
+   </div>
 </div>
+
+<!-- ANGULAR DYNAMIC CONTENT -->
+<div ng-view></div>
+
 </body>
 </html>
