--- a/public/views/bill.html
+++ b/public/views/bill.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 col-sm-12" ng-controller="newOrderController">
+<div class="col-md-12 col-sm-12" ng-controller="billController">
 	<h1>Finalize Bill</h1>
 
 	<!-- CURRENT ORDER -->
@@ -7,7 +7,7 @@
 			<h1>Current Order</h1>
 			<ul>
 				<li ng-repeat="order in order track by $index"> 
-					{{order.name}} - {{order.price | currency}}
+					{{order.name}} <a ng-repeat="side in order.sides"> + {{side.name}} </a> - {{order.price + order.sides[0].price + order.sides[1].price | currency}}
 					<span class="plusminus" ng-click="removeOne(order)">&#45</span>
 				</li>
 			</ul>
