restructured folders -> static content like login, register, landing page in public, app once authenticated located in angularapp folder. Created login, register, landing page views

--- a/angularApp/views/waiter.html
+++ b/angularApp/views/waiter.html
@@ -2,13 +2,13 @@
 	<h1>Tables</h1>
 	<h3>Welcome Back {{waiter.firstname}}</h3>
 	<div class="tablesfav">
-		<p>My Tables</p>
+		<p>My Tables:</p>
 		<ul>
 			<li class="tables" ng-repeat="table in favtables"><a ui-sref="order">Table {{table.table_number}}</a><span ng-click="remove($index)"><a href='#'>&#45</a></span></li>
 		</ul>
 	</div>
 	<div class="tablesall">
-		<p>Remaining Tables</p>
+		<p>Remaining Tables:</p>
 		<ul>
 			<li class="tables" ng-repeat="table in tables"><a ui-sref="order">Table {{table.table_number}}</a><span ng-click="add($index)"><a href='#'>&#43</a></span></li>
 		</ul>
