--- a/public/views/user-creation.html
+++ b/public/views/user-creation.html
@@ -37,6 +37,7 @@
         </div>
         <div class="control-group">
             <div class="controls">
+            	<a ng-click="cancel()" class="btn btn-small btn-danger">cancel</a>
                 <a ng-click="createNewUser()" class="btn btn-small btn-primary">create new user</a>
             </div>
         </div>
