--- a/public/views/user-detail.html
+++ b/public/views/user-detail.html
@@ -2,6 +2,24 @@
     <h1>User detail</h1>
 
     <form novalidate="novalidate" class="form-horizontal">
+    	<div class="control-group">
+            <label class="control-label" for="inputUserName">Username:</label>
+            <div class="controls">
+                <input type="text" id="inputUserName" ng-model="user.username"/>
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="inputPassword">Password:</label>
+            <div class="controls">
+                <input type="password" id="inputPassword" ng-model="user.password"/>
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="inputEmail">Email:</label>
+            <div class="controls">
+                <input type="email" id="inputEmail" ng-model="user.email"/>
+            </div>
+        </div>
         <div class="control-group">
             <label class="control-label" for="inputFirstName">First name:</label>
             <div class="controls">
@@ -15,8 +33,12 @@
             </div>
         </div>
         <div class="control-group">
+            <label class="control-label" for="inputRole">Permission role:</label>
+            <select ng-options="role.id as role.name for role in roles track by role.id" ng-model="user.RoleId" id="inputRole"></select>
+        </div>
+        <div class="control-group">
             <div class="controls">
-                <a ng-click="cancel()" class="btn btn-small">cancel</a>
+                <a ng-click="cancel()" class="btn btn-small btn-danger">cancel</a>
                 <a ng-click="updateUser()" class="btn btn-small btn-primary">update user</a>
             </div>
         </div>
