--- a/angularApp/views/newOrder.html
+++ b/angularApp/views/newOrder.html
@@ -66,6 +66,6 @@
 				<button type="submit" class="btn btn-success closeDiv">Place Order</button>
 			</form>
 
-			<a href="/bill" class="btn btn-danger closeDiv" role="button" >Finalize Bill</a>
+			<a href="/app/order/{{params}}/bill" class="btn btn-danger closeDiv" role="button" >Finalize Bill</a>
 		</div>
 </div>
