--- a/angularApp/views/bill.html
+++ b/angularApp/views/bill.html
@@ -1,22 +1,23 @@
 <div class="col-md-12 col-sm-12" ng-controller="billController">
 	<h1>Finalize Bill</h1>
-
 	<!-- CURRENT ORDER -->
-	<div class="col-md-8 col-md-offset-2 col-sm-12 currentOrder">
-		<form class="currentorder">
-			<h1>Current Order</h1>
-			<ul>
-				<li ng-repeat="order in order track by $index"> 
-					{{order.name}} <a ng-repeat="side in order.sides"> + {{side.name}} </a> - {{order.price + order.sides[0].price + order.sides[1].price | currency}}
-					<span class="plusminus" ng-click="removeOne(order)">&#45</span>
-				</li>
-			</ul>
-			<div class="total">
-				Total: {{totalq()}} items <span>{{total() | currency}}</span> 
-			</div>
-			<p>{{order | json}}</p>
-		</form>
-		<a href="#" class="btn btn-success closeDiv" role="button">Place Order</a>
-		<a href="#" class="btn btn-danger closeDiv" role="button">Finalize Bill</a>
+	<div class="col-md-8 col-md-offset-2 col-sm-12 currentOrder" >
+		<div >
+			<form class="currentorder" >
+				<h1>Bill For Table {{params}}</h1>
+				<ul>
+					<p>{{menu.MenuItems}}</p>
+					<li ng-repeat="items in orders() track by $index">
+						{{items.name}} <span>{{items.price | currency}}</span>
+					</li>
+					
+				</ul>
+				<div class="total">
+					Total: {{totalq()}} items <span>{{total() | currency}}</span> 
+				</div>
+			</form>
+			<a href="#" class="btn btn-success closeDiv" role="button">Place Order</a>
+			<a href="#" class="btn btn-danger closeDiv" role="button">Finalize Bill</a>
+		</p>
 	</div>
 </div>
