--- a/angularApp/views/newOrder.html
+++ b/angularApp/views/newOrder.html
@@ -1,33 +1,31 @@
-<div class="col-md-12 col-sm-12" ng-controller="newOrderController">
+<div class="col m12" ng-controller="newOrderController">
 		<h1>Create A New Order</h1>
 		<!-- DRINKS -->
-		<div class="col-md-6 col-md-offset-3 col-sm-12">
-			<form>
-				<h1>Drinks</h1>
-				<div class="drinks">
-					<ul>
-						<li ng-repeat="drink in drinks" ng-click="toggleActive(drink)" ng-class="{active:drink.active}">
-							{{drink.name}}
-							<span class="plusminus" ng-click="removeOne(drink)">&#45</span>
-							<span class="plusminus" ng-click="addOne(drink)">&#43</span>
-							<!--<span>{{drink.quantity}}</span> -->
-						</li>
-					</ul>
-				</div>
-			</form>
+		<div class="row">
+			<div class="col m8 col offset-m2 col s12">
+				<form>
+					<p class='title'>Drinks</p>
+					<div class="drinks">
+						<ul>
+							<li class="red lighten-2" ng-repeat="drink in drinks" ng-click="addOne(drink)" ng-class="{active:drink.active}" message="{{drink.name}}" duration="1000" toast="click">
+								{{drink.name}}
+								<!--<span>{{drink.quantity}}</span> -->
+							</li>
+						</ul>
+					</div>
+				</form>
+			</div>
 		</div>
 
 		<div class="row">
 			<!-- FOOD -->
-			<div class="col-md-6 col-md-offset-3 col-sm-12" ng-repeat="foodPerCategory in foodToFilter() | filter: filterCategories">
+			<div class="col m8 col offset-m2 col s12" ng-repeat="foodPerCategory in foodToFilter() | filter: filterCategories">
 				<form>
-					<h1>{{foodPerCategory.category}}</h1>
+					<p class='title'>{{foodPerCategory.category}}</p>
 					<div class="food">
 						<ul>
-							<li ng-repeat="food in food | filter: {category: foodPerCategory.category}" ng-click="toggleActive(drink)" ng-class="{active:food.active}">
+							<li class="red lighten-2" ng-repeat="food in food | filter: {category: foodPerCategory.category}" ng-click="addOne(food)" ng-class="{active:food.active}" message="{{food.name}}" duration="1000" toast="click">
 								{{food.name}} 
-								<span class="plusminus" ng-click="removeOne(food)">&#45</span>
-								<span class="plusminus" ng-click="addOne(food)">&#43</span>
 								<!-- <span>{{food.quantity}}</span> -->
 							</li>
 						</ul>
@@ -35,16 +33,14 @@
 				</form>
 			</div>
 
-			<div class="col-md-3" ng-hide="addside">
+			<div class="col m2 col s6" ng-hide="addside">
 				<form>
 					<span><a href="#" ng-click="addside = true" class="closeDiv">&times</a></span>
-					<h1>Choose Sides</h1>
+					<p class='title'>Choose Sides</p>
 					<div class="sides">
 						<ul>
-							<li ng-repeat="side in sides" ng-click="toggleActive(side)" ng-class="{active:food.active}">
+							<li class="red lighten-2" ng-repeat="side in sides" ng-click="addOneSide(side)" ng-class="{active:food.active}" message="{{side.name}}" duration="1000" toast="click">
 								{{side.name}}
-								<span class="plusminus" ng-click="removeOneSide(side)">&#45</span>
-								<span class="plusminus" ng-click="addOneSide(side)">&#43</span>
 								<!-- <span>{{food.quantity}}</span> -->
 							</li>
 						</ul>
@@ -54,18 +50,21 @@
 		</div>
 
 		<!-- CURRENT ORDER -->
-		<div class="col-md-8 col-md-offset-2 col-sm-12 currentOrder">
-			<form class="currentorder" ng-submit="sendOrder()" name="postOrder">
-				<h1>Current Order</h1>
-				<ul>
-					<li ng-repeat="order in order track by $index"> 
-						{{order.name}} <a ng-repeat="side in order.sides"> + {{side.name}} </a> - {{order.price + order.sides[0].price + order.sides[1].price | currency}}
-						<span class="plusminus" ng-click="removeOne(order)">&#88</span>
-					</li>
-				</ul>
-				<button type="submit" class="btn btn-success closeDiv">Place Order</button>
-			</form>
-
-			<a href="/app/order/{{params}}/bill" class="btn btn-danger closeDiv" role="button" >Finalize Bill</a>
+		<div class="row">
+			<div class="col m8 col offset-m2 col s12 currentOrder">
+				<form class="currentorder" ng-submit="sendOrder()" name="postOrder">
+					<p class='title'>Current Order</p>
+					<ul>
+						<li class="green lighten-2"ng-repeat="order in order track by $index"> 
+							{{order.name}} <a ng-repeat="side in order.sides"> + {{side.name}} </a>
+							<span class="plusminus" ng-click="removeOne(order)">&#88</span>
+						</li>
+					</ul>
+					<a href="/app/" message="{{message}}" toast="click"><button type="submit" class="btn red lighten-2 closeDiv">Place Order</button></a>
+				</form>
+				<div id="finalize">
+					<a href="/app/order/{{params}}/bill" class="btn closeDiv" role="button" >Finalize Bill</a>
+				</div>
+			</div>
 		</div>
 </div>
