--- a/angularApp/css/style.css
+++ b/angularApp/css/style.css
@@ -12,26 +12,9 @@ body{
 }
 
 h1 {
-	font-size: 50px;
+	font-size: 61px;
 	font-family:'Cookie', cursive;
 }
-.title {
-	font-size: 40px;
-	font-family:'Cookie', cursive;
-	color: #fff;
-	text-align: center;
-}
-
-.titlekitchen {
-	font-size: 20px;
-	font-family:'Cookie', cursive;
-	color: #fff;
-}
-
-.status {
-	font-size: 10px;
-}
-
 
 a, a:visited {
 	outline:none;
@@ -47,7 +30,7 @@ section, footer, header, aside, nav{
 }
 
 nav {
-	background-color: #61a1bc !important;
+	background-color: #61a1bc;
 	color: #fff;
 }
 
@@ -64,7 +47,7 @@ nav a {
 }
 
 .input-field input[type=text]:focus, .input-field input[type=password]:focus, .input-field textarea:focus {
-     border-bottom: 2px solid #e57373 !important;
+     border-bottom: 2px solid #e35885 !important;
      box-shadow: 0 1px 0 0 #fff;
    }
 
@@ -85,8 +68,8 @@ form{
 	background-color: #61a1bc;
 	border-radius: 2px;
 	box-shadow: 0 1px 1px #ccc;
-	padding: 10px 20px;
-	margin: 10px auto;
+	padding: 25px 50px;
+	margin: 30px auto;
 }
 
 form h1{
@@ -101,7 +84,7 @@ form h1{
 form ul{
 	list-style:none;
 	color:#fff;
-	font-size:20px;
+	font-size:18px;
 	font-weight:bold;
 	text-align: left;
 	margin:10px 0 8px;
@@ -110,13 +93,9 @@ form ul{
 form ul li{
 	padding:10px 15px;
 	background-color:#e35885;
-	margin-bottom:2px;
+	margin-bottom:8px;
 	box-shadow:0 1px 1px rgba(0,0,0,0.1);
 	cursor:pointer;
-}
-
-form ul li:hover {
-	box-shadow: 2px 2px 2px rgba(0,0,0,0.4);
 }
 
 form ul li span{
@@ -145,14 +124,6 @@ div.total span{
 	font-size: 20px;
 }
 
-.plusminus:hover {
-	color: #e57373;
-}
-
-#finalize {
-	padding: 30px;
-}
-
 
 /*-------------------- 
 WAITER VIEW 
@@ -161,7 +132,7 @@ WAITER VIEW
 .tables {
 	list-style-type: none;
 	background-color: #61a1bc;
-	font-size: 30px;
+	font-size: 20px;
 	margin: 5px;
 	padding: 5px;
 }
@@ -183,7 +154,7 @@ a.closeDiv {
 }
 
 .currentOrder {
-	margin: ;
+	margin-bottom: 100px;
 }
 
 ul li.active {
