--- a/angularApp/views/waiter.html
+++ b/angularApp/views/waiter.html
@@ -1,17 +1,21 @@
-<div class="col-md-8 col-md-offset-2 col-sm-12" ng-controller="WaiterController">
+<div class="col m12" ng-controller="WaiterController">
 	<h1>Tables</h1>
-	<h3>Welcome Back {{waiter.firstname}}</h3>
-	<div class="tablesfav">
-		<p>My Tables:</p>
-		<ul>
-			<li class="tables" ng-repeat="table in favtables | orderBy:'number'" ng-class="{active:table.isfree}"><a ui-sref="order({id:table.number})">Table {{table.number}}</a><span ng-click="remove($index)"><a href='#'>&#45</a></span></li>
-		</ul>
-	</div>
-	<div class="tablesall">
-		<p>Remaining Tables:</p>
-		<ul>
-			<li class="tables" ng-repeat="table in tables | orderBy:'number'" ng-class="{active:table.isfree}"><a ui-sref="order({id:table.number})"">Table {{table.number}}</a><span ng-click="add($index)"><a href='#'>&#43</a></span>
-			</li>
-		</ul>
-	</div>
+		<div class="row">
+			<div class="col m10 col offset-m1 col s12">
+				<div class="tablesfav">
+					<p>My Tables:</p>
+					<ul>
+						<li class="tables" ng-repeat="table in favtables | orderBy:'number'" ng-class="{active:table.isfree}"><a ui-sref="order({id:table.number})">Table {{table.number}}</a><span ng-click="remove($index)"><a href='#'>&#45</a></span></li>
+					</ul>
+				</div>
+				<div class="tablesall">
+					<p>Remaining Tables:</p>
+					<ul>
+						<li class="tables" ng-repeat="table in tables | orderBy:'number'" ng-class="{active:table.isfree}">
+							<a ui-sref="order({id:table.number})">Table {{table.number}}<span ng-click="add($index)"><a href='#'>&#43</a></span></a></li>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 </div>
