--- a/public/views/register.html
+++ b/public/views/register.html
@@ -17,7 +17,11 @@
 				</div>
 				<div class="form-group login">
 					<label for="email" class="control-label">Email</label>
-					<input class="form-control login", type="text", name="email", placeholder="Email Address", required>
+					<input class="form-control login", type="email", name="email", placeholder="Email Address", required>
+				</div>
+				<div class="form-group login">
+					<label for="number" class="control-label">Phone number (with country code, without 00 or +)</label>
+					<input class="form-control login", type="number", name="number", placeholder="Phone", required>
 				</div>
 				<div class="form-group login">
 					<label for="description" class="control-label">Restaurant Description</label>
