--- a/MenuEditor/public/stylesheets/style.css
+++ b/MenuEditor/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
-  padding: 50px;
+  padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+
 }
 
 a {
@@ -9,4 +10,20 @@ a {
 
 i {
 	color: grey;
+}
+
+::-webkit-input-placeholder {
+   color: #009688;
+}
+
+.row .col.s7 {
+	margin-left:0px;
+}
+
+/*.row .col.s3 {
+	margin-left:0px;
+}*/
+
+div.row .col.s12 {
+	 margin-left:0px;
 }
