--- a/MenuEditor/views/index.html
+++ b/MenuEditor/views/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="menuItems">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Add Menu Items</title>
 	<!-- Compiled and minified CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
@@ -18,7 +19,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col s12">
-				<div class="card teal">
+				<div class="card teal col s12">
 					<div class="card-content white-text">
 						<span class="card-title">Add Menu Items </span>
 						<p> Use this form to enter and edit menu items </p>
@@ -49,7 +50,7 @@
 						<label for="price"> Item Price </label>
 					</div>
 					<div class="input-field col l3 offset-l3 s12">
-						<input type="text" class="validate" id="itemnumber">
+						<input type="text" class="validate" id="itemnumber" ng-model="formData.itemnumber">
 						<label for="itemnumber"> Menu Item No. </label>
 					</div>
 				</div>
@@ -57,14 +58,14 @@
 					<hr>
 				</div>
 				<div class="row col s12">
-					<div class="input-field col l6 s6">
+					<div class="input-field col l6 s12">
 						<p>
 							<input type="checkbox" id="isside" ng-model="formData.isside">
 							<label for="isside"> Is Side </label>
 						</p>
 					</div>
 
-					<div class="input-field col l6 s6">
+					<div class="input-field col l6 s12">
 						<input type="number" " ng-model="formData.singleprice" id="singleprice">
 						<label for="singleprice"> Side Price </label>
 					</div>
@@ -115,120 +116,159 @@
 
 	<div class="container" >
 		<div class="item-list">
-			<ul ng-repeat="MenuItem in itemData" ng-repeat="editData in editData">
-				<div >
-					<li class="row col s12">
+			<div class="row col l6">
+				<ul class="" ng-repeat="MenuItem in itemData" ng-repeat="editData in editData">
 
-						<div class="row col s12" >
-							<div class="col s7">
+					<li>
+
+						<div class="row z-depth-1 valign-wrapper " >
+							<div class="col s7 " ng-hide="edit" >
 								{{MenuItem.name}}
 							</div>
-							<form id="edit" ng-show="edit">
-								
-								<div class="row col s12">
-									<div class="input-field col s6">
-										<input type="text" class="validate" id="name2"  ng-model="editData.name">
-										<label for="name2"> {{MenuItem.name}} </label>
-									</div>
-									<div class="input-field col s6">
-										<input type="text"  class="validate" id="category2" ng-model="editData.category">
-										<label for="category2"> {{MenuItem.category}} </label>
-									</div>
-								</div>
 
-								<div class="row col s12">
-									<div class="input-field col s3">
-										<input type="text"  class="validate" id="price2" ng-model="editData.price">
-										<label for="price2"> {{MenuItem.price}} </label>
+							<div class="row col s12"  ng-show="edit">
+								<form id="edit">
+
+									<div class="section"></div>
+									<div class="section"></div>
+									<div class="row col s12">
+										<div class="col s2 offset-s10"><a href ng-click="edit=false" >
+											<i  class="small material-icons">clear</i>
+										</a></div>
 									</div>
-									<div class="input-field col s3 offset-s3">
-										<input type="text" class="validate" id="itemnumber2" ng-model="editData.itemnumber">
-										<label for="itemnumber2"> {{MenuItem.itemnumber}} </label>
-									</div>
-								</div>
-								
-								<div class="row col s12">
-									<div class="input-field col s6">
-										<p>
-											<input type="checkbox" id="isside2" ng-model="editData.isside" >
-											<label for="isside2"> Is Side </label>
-										</p>
+									<div class="row col s12">
+										<div class="input-field col l2 s12">
+											<input  type="text" value="Item Name:" disabled>
+										</div>
+										<div class="input-field col l10 s12">
+											<input type="text" class="validate teal-text" id="name2"  ng-model="editData.name" placeholder="{{MenuItem.name}}">
+											<label for="name2"> </label>
+										</div>
+
 									</div>
 
-									<div class="input-field col s3">
-										<input type="number" placeholder="{{MenuItem.singleprice || 'side price'}}" ng-model="editData.singleprice" id="singleprice2">
-										
-									</div>
-								</div>
-								
-								<div class="row col s12">
-									<div class="input-field col s12">
-										<p>	
-											<input type="checkbox" id="isdrink2" ng-model="editData.isdrink" >
-											<label for="isdrink2"> Is Drink </label>
-										</p>
-									</div>
-								</div>
-								
-								<div class="row col s12">
-									<div class="input-field col s12">
-										<p>
-											<input type="checkbox" id="isveggie2" ng-model="editData.isveggie">
-											<label for="isveggie2"> Is Veggie </label>
-										</p>
-									</div>
-								</div>
-								
-								<div class="row col s12">
-									<div class="input-field col s12">
-										<p>
-											<input type="checkbox" id="isvegan2" ng-model="editData.isvegan">
-											<label for="isvegan2"> Is Vegan </label>
-										</p>
-									</div>
-								</div>
-								<hr>
-								<div class="section"></div>
-								<div class="row col s12">
-									<button type="submit" class="waves-effect waves-light btn" ng-click="updateItem(MenuItem.id)">Update Item</button>
-								</div>
+									<div class="row col s12">
+										<div class="input-field col l2 s12">
+											<input type="text" value="Item Category:" disabled>
+										</div>
 
-							</form>
-							<div class="col s1 offset-s3"> 
-								<a href ng-click="deleteItem(MenuItem.id)">
-									<i  class="small material-icons">delete</i>
-								</a>
+
+										<div class="input-field col l10 s12">
+											<input type="text"  class="validate" id="category2" ng-model="editData.category" placeholder="{{MenuItem.category}}">
+											<label for="category2">  </label>
+										</div>
+									</div>
+									<div class="row col s12">
+										<div class="input-field col l2 s12">
+											<input type="text" value="Price €:" disabled>
+										</div>
+										<div class="input-field col l10 s12">
+											<input type="text"  class="validate" id="price2" ng-model="editData.price" placeholder="{{MenuItem.price || ' - '}}">
+											<label for="price2">  </label>
+										</div>
+
+									</div>
+									<div class="row col s12">
+										<div class="input-field col l2 s12">
+											<input type="text" value="Menu Item No.:" disabled>
+										</div>
+
+										<div class="input-field col l10 s12">
+											<input type="text" class="validate" id="itemnumber2" ng-model="editData.itemnumber" placeholder="{{MenuItem.itemnumber || ' - '}}">
+											<label for="itemnumber2">  </label>
+										</div>
+									</div>
+
+									<div class="row col s12">
+
+										<div class="input-field col s6 l4">
+											<p>
+												<input type="checkbox" id="isside2" ng-model="editData.isside" >
+												<label for="isside2"> Side </label>
+											</p>
+										</div>
+										<div class="input-field col s6 l4">
+											<input type="text" value="Side Price €:" disabled>
+										</div>
+										<div class="input-field col s6 offset-s6 l4">
+											<input type="number" placeholder="{{MenuItem.singleprice || ' - '}}" ng-model="editData.singleprice" id="singleprice2">
+
+										</div>
+									</div>
+
+									<div class="row col s12">
+										<div class="input-field col l4 s4">
+											<p>	
+												<input type="checkbox" id="isdrink2" ng-model="editData.isdrink" >
+												<label for="isdrink2"> Drink </label>
+											</p>
+										</div>
+
+
+
+										<div class="input-field col l4 s4">
+											<p>
+												<input type="checkbox" id="isveggie2" ng-model="editData.isveggie">
+												<label for="isveggie2"> Veggie </label>
+											</p>
+										</div>
+
+
+
+										<div class="input-field col l4 s4">
+											<p>
+												<input type="checkbox" id="isvegan2" ng-model="editData.isvegan">
+												<label for="isvegan2"> Vegan </label>
+											</p>
+										</div>
+									</div>
+									<div class="section"></div>
+
+									<div class="row col s12">
+										<div class="input-field col s12">
+											<button type="submit" class="waves-effect waves-light btn" ng-click="updateItem(MenuItem.id)">Update Item</button>
+										</div>
+									</div>
+
+								</form>
 							</div>
-							<div class="col s1"> 
-								<a href ng-click="edit=true">
-									<i  class="small material-icons">mode_edit</i>
-								</a>
+
+							<div class="col s5 " ng-hide="edit">
+								<div class="col s3 offset-s5"> 
+									<a href ng-click="deleteItem(MenuItem.id)"  >
+										<i  class="small material-icons">delete</i>
+									</a>
+								</div>
+								<div class="col s3"> 
+									<a href ng-click="edit=true"  >
+										<i  class="small material-icons">mode_edit</i>
+									</a>
+								</div>
 							</div>
 						</div>
 
-
-
-
 					</li>
 
-					<hr>
-				</div>
-			</ul>
-
+				</ul>
+			</div>
 		</div>
 	</div>
-</div>
 
 
 
-<!-- scripts -->
-<script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.12/angular.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.1.9/angular-materialize.min.js"></script> 
-<script src="angular-xeditable/js/xeditable.js"></script>
 
-<script src="javascripts/app.js"></script>
+
+
+
+
+	<!-- scripts -->
+	<script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.12/angular.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.1.9/angular-materialize.min.js"></script> 
+	<script src="angular-xeditable/js/xeditable.js"></script>
+
+	<script src="javascripts/app.js"></script>
 
 
 
