--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,12 +1,14 @@
 <div class="row">
-	<div class="col-sm-6 col-md-4 col-md-offset-4">
-		<h1 class="text-center login-title">Login</h1>
-		<div>
-			<img class="profile-img" src="http://www.sammobile.com/wp-content/themes/sammobile-4/assets/img/layout/login-avatar.png">
-			<form class="form-signin" action="/login" method="POST">
-				<input class="form-control", type="text", name="username", placeholder="Username", required, autofocus>
-				<input class="form-control", type="text", name="password", placeholder="Password", required, >
-				<button class="btn btn-lg btn-primary btn-block", type="submit">Login</button>
+	<div class="col s8 offset-s2 m4 offset-m4">
+		
+		<div class="input-field">
+			<form class="form-signin login" action="/login" method="POST">
+				<h1 class="text-center login">Login</h1>
+				<img class="profile-img login" src="http://www.sammobile.com/wp-content/themes/sammobile-4/assets/img/layout/login-avatar.png">
+				<input class="form-control login center-align", type="text", name="username", placeholder="Username", required, autofocus>
+				<input class="form-control login center-align", type="password", name="password", placeholder="Password", required, >
+				<input class="form-control login center-align", type="text", name="restaurant", placeholder="Restaurant", required>
+				<button class="btn center-align login", type="submit">Login</button>
 			</form>
 			
 		</div>
