fixed merge conflict

--- a/angularApp/views/newOrder.html
+++ b/angularApp/views/newOrder.html
@@ -60,7 +60,7 @@
 							<span class="plusminus" ng-click="removeOne(order)">&#88</span>
 						</li>
 					</ul>
-					<button class="btn red lighten-2"><a id="link" ng-click="sendOrder()" ref="/app/" message="{{message}}" toast="click">Place Order</a></button>
+					<button class="btn red lighten-2"><a id="link" ng-click="sendOrder()" href="/app/" message="{{message}}" toast="click">Place Order</a></button>
 				</form>
 				<div id="finalize">
 					<a href="/app/order/{{params}}/bill" class="btn closeDiv" role="button" >Finalize Bill</a>
