changed links to white

--- a/public/views/landingpage.html
+++ b/public/views/landingpage.html
@@ -3,8 +3,8 @@
 		
 		<div>
 			<h1>Restaurant POS App</h1>
-			<button class="btn btn-lg btn-default"><a href="/register">Register Your Restaurant!</a></button>
-			<button class="btn btn-lg btn-default red lighten-2"><a href="/login" >Login</a></button>
+			<button class="btn btn-lg btn-default"><a href="/register" class="link">Register Your Restaurant!</a></button>
+			<button class="btn btn-lg btn-default red lighten-2"><a href="/login" class="link">Login</a></button>
 		</div>
 	</div>
 </div>
